--- a/index.html
+++ b/index.html
@@ -7,23 +7,19 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-    <div id="logo"><a href=""><img src="./src/logo.png" alt="Logo"></a></div>
+    <header id="first">
+    <div id="logo"><a href="#first"><img src="./src/logo.png" alt="Logo"></a></div>
     <nav>
         <ul>
-            <li><a href="">Product</a></li>
-            <li><a href="">Company</a></li>
-            <li><a href="">Latest</a></li>
-            <li><a href="">Pricing</a></li>
+            <li><a href="#second">Company</a></li>
+            <li><a href="#third">Latest</a></li>
+            <li><a href="#fourth">Pricing</a></li>
             <li><button>Contact</button></li>
         </ul>
     </nav>
 
     </header>
 
-    <!-- To be deleted 
-    -->
-        <hr>
 
     <main>
         <div class="row">
@@ -31,6 +27,30 @@
             <div class="column"><div id="anim5"></div></div>
         </div>
         
+        <div class="second" id="second">
+            <div class="container">
+                <div class="row">
+                    <div class="column"><div id="anim2"></div></div>
+                    <div class="column"><h1>Who are we:</h1>
+                        <div class="card">
+                            <p>We are a digital agency who specializes in digital marketing, seo optimization, website design and development.</p>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+
+        <div class="third" id="third">
+            <div class="container">
+                <div class="column">
+                    <h1>Latest blog posts</h1>
+                    <div class="row"><h1>Dick</h1></div>
+                    <div class="row"><h1>Dick</h1></div>
+                    <div class="row"><h1>Dick</h1></div>
+                </div>
+            </div>
+        </div>
 
     </main>
 
