--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <header id="first">
-    <div id="logo"><a href="#first"><img src="./src/logo.png" alt="Logo"></a></div>
+    <div id="logo"><a href="#first"><img src="./src/logo3.png" alt="Logo"></a></div>
     <nav>
         <ul>
+            <li><a href="#first">Home</a></li>
             <li><a href="#second">Company</a></li>
             <li><a href="#third">Latest</a></li>
             <li><a href="#fourth">Pricing</a></li>
@@ -23,7 +24,7 @@
 
     <main>
         <div class="row">
-            <div class="column"><h1>Watermelon agency stuff</h1></div>
+            <div class="column"><h1 id="maintitle">Watermelon agency stuff</h1></div>
             <div class="column"><div id="anim5"></div></div>
         </div>
         
@@ -31,7 +32,7 @@
             <div class="container">
                 <div class="row">
                     <div class="column"><div id="anim2"></div></div>
-                    <div class="column"><h1>Who are we:</h1>
+                    <div class="column"><h1>Who are we?</h1>
                         <div class="card">
                             <p>We are a digital agency who specializes in digital marketing, seo optimization, website design and development.</p>
                         </div>
@@ -44,11 +45,30 @@
         <div class="third" id="third">
             <div class="container">
                 <div class="column">
-                    <h1>Latest blog posts</h1>
-                    <div class="row"><h1>Dick</h1></div>
-                    <div class="row"><h1>Dick</h1></div>
-                    <div class="row"><h1>Dick</h1></div>
+                    <h1 id="title">Latest blog posts</h1>
+                    <div class="row" id="post1">
+                        <div class="blogcard">
+                            <img src="./src/laptop.jpg" alt="laptop">
+                        <p><a href="">How do we work on a project and how do we handle clients and other 
+                            information here to fill up the box like idk something very interesting i guess.</a></p>
+                    </div>
+                    </div>
+                    <div class="row" id="post2">
+                        <div class="blogcard">
+                            <img src="./src/coffee.jpg" alt="coffee">
+                        <p><a href="">How do we work on a project and how do we handle clients and other 
+                            information here to fill up the box like idk something very interesting i guess.</a></p>
+                    </div>
+                    </div>
+                    <div class="row" id="post3">
+                        <div class="blogcard">
+                            <img src="./src/laptop2.jpg" alt="laptop2">
+                        <p><a href="">How do we work on a project and how do we handle clients and other 
+                            information here to fill up the box like idk something very interesting i guess.</a></p>
+                    </div>
+                    </div>
                 </div>
+                <div class="column" id="anim3"></div>
             </div>
         </div>
 
