--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+    <!-- Header section -->
+
     <header id="first">
     <div id="logo"><a href="#first"><img src="./src/logo3.png" alt="Logo"></a></div>
     <nav>
@@ -21,13 +24,19 @@
 
     </header>
 
+    <!-- Main section -->
 
     <main>
+
+        <!-- First page -->
+
         <div class="row">
             <div class="column"><h1 id="maintitle">Watermelon agency stuff</h1></div>
             <div class="column"><div id="anim5"></div></div>
         </div>
         
+        <!-- Second page -->
+
         <div class="second" id="second">
             <div class="container">
                 <div class="row">
@@ -41,6 +50,8 @@
                 
             </div>
         </div>
+
+        <!-- Third page -->
 
         <div class="third" id="third">
             <div class="container">
@@ -72,8 +83,65 @@
             </div>
         </div>
 
+        <!-- Fourth Page-->
+
+        <div class="fourth" id="fourth">
+            <h1>Choose one of our plans</h1>
+            <div class="row">
+                <div class="columnprice">
+                    <h1>Price #1</h1>
+                    <hr>
+                    <ul>
+                        <li class="active"><i class="fas fa-angle-double-up"></i>Benefit 1</li>
+                        <li class="active"><i class="fas fa-at"></i>Benefit 2</li>
+                        <li class="active"><i class="fas fa-award"></i>Benefit 3</li>
+                        <li class="active"><i class="far fa-bell"></i>Benefit 4</li>
+                        <li><i class="fab fa-btc"></i>Benefit 5</li>
+                        <li><i class="fas fa-bug"></i>Benefit 6</li>
+                        <li><i class="fas fa-chart-pie"></i>Benefit 7</li>
+                        <li><i class="far fa-calendar-check"></i>Benefit 8</li>
+                    </ul>
+                    <button>Try</button>
+                    <button>Buy</button>
+                </div>
+                <div class="columnprice">
+                    <h1>Price #2</h1>
+                    <hr>
+                    <ul>
+                        <li class="active"><i class="fas fa-angle-double-up"></i>Benefit 1</li>
+                        <li class="active"><i class="fas fa-at"></i>Benefit 2</li>
+                        <li class="active"><i class="fas fa-award"></i>Benefit 3</li>
+                        <li class="active"><i class="far fa-bell"></i>Benefit 4</li>
+                        <li class="active"><i class="fab fa-btc"></i>Benefit 5</li>
+                        <li class="active"><i class="fas fa-bug"></i>Benefit 6</li>
+                        <li><i class="fas fa-chart-pie"></i>Benefit 7</li>
+                        <li><i class="far fa-calendar-check"></i>Benefit 8</li>
+                    </ul>
+                    <button>Try</button>
+                    <button>Buy</button>
+                </div>
+                <div class="columnprice">
+                    <h1>Price #3</h1>
+                    <hr>
+                    <ul>
+                        <li class="active"><i class="fas fa-angle-double-up"></i>Benefit 1</li>
+                        <li class="active"><i class="fas fa-at"></i>Benefit 2</li>
+                        <li class="active"><i class="fas fa-award"></i>Benefit 3</li>
+                        <li class="active"><i class="far fa-bell"></i>Benefit 4</li>
+                        <li class="active"><i class="fab fa-btc"></i>Benefit 5</li>
+                        <li class="active"><i class="fas fa-bug"></i>Benefit 6</li>
+                        <li class="active"><i class="fas fa-chart-pie"></i>Benefit 7</li>
+                        <li class="active"><i class="far fa-calendar-check"></i>Benefit 8</li>
+                    </ul>
+                    <button>Try</button>
+                    <button>Buy</button>
+                </div>
+            </div>
+        </div>
+
     </main>
 
+    <script src="https://kit.fontawesome.com/c642c5eee4.js" crossorigin="anonymous"></script>
     <script src="./js/lottie.js"></script>
     <script src="./js/app.js"></script>
 </body>
