--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         <div class="fourth" id="fourth">
             <h1>Choose one of our plans</h1>
             <div class="row">
+                <div id="anim4"></div>
+                <div id="anim9"></div>
                 <div class="columnprice">
                     <h1>Price #1</h1>
                     <hr>
@@ -140,6 +142,14 @@
         </div>
 
     </main>
+
+    <footer>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter-square"></i>
+        <h4>Check us out on social media</h4>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-linkedin"></i>  
+    </footer>
 
     <script src="https://kit.fontawesome.com/c642c5eee4.js" crossorigin="anonymous"></script>
     <script src="./js/lottie.js"></script>
