--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
             <li><a href="#second">Company</a></li>
             <li><a href="#third">Latest</a></li>
             <li><a href="#fourth">Pricing</a></li>
-            <li><button>Contact</button></li>
+            <li><button id="contact">Contact</button></li>
         </ul>
     </nav>
+
+        <!-- Contact page -->
+
+    <div class="contact">
+        <h1>dick
+        </h1>
+    </div>
 
     </header>
 
@@ -57,21 +64,21 @@
             <div class="container">
                 <div class="column">
                     <h1 id="title">Latest blog posts</h1>
-                    <div class="row" id="post1">
+                    <div class="row">
                         <div class="blogcard">
                             <img src="./src/laptop.jpg" alt="laptop">
                         <p><a href="">How do we work on a project and how do we handle clients and other 
                             information here to fill up the box like idk something very interesting i guess.</a></p>
                     </div>
                     </div>
-                    <div class="row" id="post2">
+                    <div class="row">
                         <div class="blogcard">
                             <img src="./src/coffee.jpg" alt="coffee">
                         <p><a href="">How do we work on a project and how do we handle clients and other 
                             information here to fill up the box like idk something very interesting i guess.</a></p>
                     </div>
                     </div>
-                    <div class="row" id="post3">
+                    <div class="row">
                         <div class="blogcard">
                             <img src="./src/laptop2.jpg" alt="laptop2">
                         <p><a href="">How do we work on a project and how do we handle clients and other 
