--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
         <!-- Contact page -->
 
     <div class="contact">
-        <h1>dick
-        </h1>
+        <div class="form-inner">
+            <h1>Contact us</h1>
+            <input type="text" placeholder="Username">
+            <input type="email" placeholder="Email">
+            <textarea placeholder="Message..." rows="5"></textarea>
+            <button type="submit" href="/">Submit</button>
+            <p>All rights reserved, etc</p>
+        </div>
     </div>
 
     </header>
