--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watermelon</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type ="text/css" href="css/responsive.css">
 
 </head>
 
@@ -45,9 +46,9 @@
 
         <!-- First page -->
 
-        <div class="row">
-            <div class="column"><h1 id="maintitle">Watermelon agency stuff</h1></div>
-            <div class="column"><div id="anim5"></div></div>
+        <div class="row" id="first">
+            <div class="column" id="first"><h1 id="maintitle">Watermelon agency stuff</h1></div>
+            <div class="column" id="first"><div id="anim5"></div></div>
         </div>
         
         <!-- Second page -->
