--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="second" id="second">
             <div class="container">
                 <div class="row">
-                    <div class="column"><div id="anim2"></div></div>
-                    <div class="column"><h1>Who are we?</h1>
+                    <div class="column" id="second"><div id="anim2"></div></div>
+                    <div class="column" id="second"><h1>Who are we?</h1>
                         <div class="card">
                             <p>We are a digital agency who specializes in digital marketing, seo optimization, website design and development.</p>
                         </div>
