--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="third" id="third">
             <div class="container">
-                <div class="column">
+                <div class="column" id="third">
                     <h1 id="title">Latest blog posts</h1>
                     <div class="row">
                         <div class="blogcard">
