--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watermelon</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type ="text/css" href="css/responsive.css">
-    
 
 </head>
 
@@ -76,21 +74,21 @@
                     <h1 id="title">Latest blog posts</h1>
                     <div class="row">
                         <div class="blogcard">
-                            <img src="./src/laptop.jpg" alt="laptop">
+                           <!-- <img src="./src/laptop.jpg" alt="laptop"> -->
                         <p><a href="">How do we work on a project and how do we handle clients and other 
                             information here to fill up the box like idk something very interesting i guess.</a></p>
                     </div>
                     </div>
                     <div class="row">
                         <div class="blogcard">
-                            <img src="./src/coffee.jpg" alt="coffee">
+                           <!-- <img src="./src/coffee.jpg" alt="coffee"> -->
                         <p><a href="">How do we work on a project and how do we handle clients and other 
                             information here to fill up the box like idk something very interesting i guess.</a></p>
                     </div>
                     </div>
                     <div class="row">
                         <div class="blogcard">
-                            <img src="./src/laptop2.jpg" alt="laptop2">
+                           <!-- <img src="./src/laptop2.jpg" alt="laptop2"> -->
                         <p><a href="">How do we work on a project and how do we handle clients and other 
                             information here to fill up the box like idk something very interesting i guess.</a></p>
                     </div>
